--- a/exercise-03/more-html-practice.html
+++ b/exercise-03/more-html-practice.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>More HTML Practice</title>
   </head>
 
   <body>
     <h1>More HTML Practice</h1>
 
-    <!-- add your tags :) -->
+    <!-- em: stresses strong emphasis -->
+    <p>will you <em>please</em> stop that hammering?</p>
 
   </body>
 </html>
