Updates to macintosh-128k.html

--- a/exercise-03/macintosh-128k.html
+++ b/exercise-03/macintosh-128k.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Apple Computer: Macintosh 128K</title>
   </head>
 
   <body>
+    <!-- em: stresses strong emphasis -->
+
     <h1>Macintosh 128k</h1>
 
-    <p>The Macintosh 128K, originally released as the Apple Macintosh, is the original Apple Macintosh personal computer.</p>
+    <p> <em>The Macintosh 128K</em>, originally released as the <em>Apple Macintosh</em>, is the original <em>Apple Macintosh</em> personal computer.</p>
 
-    <p>Its beige case consists of a 9 in (23 cm) CRT monitor and comes with a keyboard and mouse. A handle built into the top of the case makes it easier for the computer to be lifted and carried. It's selling price is $2,495.</p>
+    <p>Its beige case consists of a 9 in (23 cm) <em>CRT monitor</em> and comes with a <em>keyboard and mouse</em>. A handle built into the top of the case makes it easier for the computer to be lifted and carried. It's selling price is <em>$2,495</em>.</p>
 
     <p>The Macintosh was introduced by the now-famous $370,000 television commercial directed by Ridley Scott, "1984", which aired on CBS during the third quarter of Super Bowl XVIII on January 22, 1984.</p>
 
@@ -30,11 +32,11 @@
 
     <h2>Software</h2>
 
-    <p>The applications MacPaint and MacWrite are bundled with the Mac. Other programs available include MacProject, MacTerminal and Microsoft Word. Programming languages available include MacBASIC, MacPascal and the Macintosh 68000 Development System.</p>
+    <p>The applications <em>MacPaint</em> and <em>MacWrite</em> are bundled with the Mac. Other programs available include <em>MacProject, MacTerminal</em> and <em>Microsoft Word</em>. Programming languages available include <em>MacBASIC, MacPascal</em> and the Macintosh 68000 Development System.</p>
 
     <h2>Release</h2>
 
-    <p>The Macintosh 128K is available for purchase starting January 24, 1984. An upgraded model, the 512K, is expected to be released in September 1984.</p>
+    <p>The <em>Macintosh 128K</em> is available for purchase starting January 24, 1984. An upgraded model, the 512K, is expected to be released in September 1984.</p>
 
     <h2>Reception</h2>
 
@@ -43,7 +45,7 @@
 
     <h2>More Information</h2>
 
-    <p>For more information about the new Macintosh 128K, please send a SASE to:</p>
+    <p>For more information about the new <em>Macintosh 128K</em>, please send a SASE to:</p>
 
     <p>Apple Computer, 20525 Mariani Avenue, Cupertino, California, 95014</p>
 
