Updates to my-favorite-sites.html

--- a/exercise-04/01-external-links/my-favorite-sites.html
+++ b/exercise-04/01-external-links/my-favorite-sites.html
@@ -9,7 +9,7 @@
     <h1>My Favorite Web Sites</h1>
 
     <ul>
-      <li></li>
+      <li><a href="https://miami.edu">University of Miami</a></li>
       <li></li>
       <li></li>
       <li></li>
@@ -17,7 +17,7 @@
 
     <footer>
       <address>
-        <p>Email: ibis@miami.edu</p>
+        <p>Email: <a ibis@miami.edu</p>
         <p>Phone: 305-284-2211</p> 
       </address>
     </footer>
